:tada: Added New Buttons in Page

--- a/index.html
+++ b/index.html
@@ -29,15 +29,19 @@
       </div>
       <ul>
         <li>
-          <a href="#" target="_blank">My Profile</a>
+          <a href="#" target="_blank">Quem Sou Eu</a>
         </li>
 
         <li>
-          <a href="#" target="_blank">My Community</a>
+          <a href="#" target="_blank">Meu Currículo</a>
         </li>
 
         <li>
-          <a href="#" target="_blank">My Epic Store</a>
+          <a href="#" target="_blank">Minha Loja Épica</a>
+        </li>
+
+        <li>
+          <a href="#" target="_blank">Contate-me</a>
         </li>
       </ul>
 
