:tada: Fixes Bugs and Added New Maintenance Page

--- a/index.html
+++ b/index.html
@@ -29,19 +29,19 @@
       </div>
       <ul>
         <li>
-          <a href="#" target="_blank">Quem Sou Eu</a>
+          <a href="https://lutekdev.github.io/lutek_MaintenancePage/" target="_blank">Quem Sou Eu</a>
         </li>
 
         <li>
-          <a href="#" target="_blank">Meu Currículo</a>
+          <a href="https://lutekdev.github.io/lutek_MaintenancePage/" target="_blank">Meu Currículo</a>
         </li>
 
         <li>
-          <a href="#" target="_blank">Minha Loja Épica</a>
+          <a href="https://lutekdev.github.io/lutek_MaintenancePage/" target="_blank">Minha Loja Épica</a>
         </li>
 
         <li>
-          <a href="#" target="_blank">Contate-me</a>
+          <a href="https://lutekdev.github.io/lutek_MaintenancePage/" target="_blank">Contate-me</a>
         </li>
       </ul>
 
